5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1679_1100.log
== TEST (2019-04-25 16:45:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print:"Animal: Mico-leao-dourado"
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print:"Animal: Garoupa"
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:46:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print:"Animal: Garoupa"
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:46:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:46:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:46:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:46:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:46:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:47:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:47:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- EXECUTION TIME:
0.202805
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:47:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garça")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onça-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:48:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:49:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:49:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:49:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:49:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:49:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:49:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:49:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print(a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- EXECUTION TIME:
0.122398
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:50:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:" a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- ERROR:
File "XXXX", line 5
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:50:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:50:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a=int(input("Valor da cedula: "))
print("Entrada:",a)
if(a==2):
	print("Animal: Tartaruga")
elif(a==5):
	print("Animal: Garca")
elif(a==10):
	print("Animal: Arara")
elif(a==20):
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Animal: Onca-pintada")
elif(a==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
		


-- EXECUTION TIME:
0.193658
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
